# hl

./: AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.build  Makefile  README.md  RELEASE.md  build.sh  esbuild.config.mjs  install-head.sh  install.sh  package.json  sea-config.json  tsconfig.json
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
scripts/: build-linux.sh
src/: cli.ts  config.rs  discovery.rs  docker.rs  env.rs  git.rs  health.rs  lib.rs  log.rs  main.rs  procfile.rs  systemd.rs  units_spec_builder.rs
src/commands/: accessories.rs  accessory.rs  compose.ts  deploy.rs  deploy.ts  env.rs  init.rs  init.ts  logs.rs  mod.rs  restart.rs  rollback.rs  rollback.ts  secrets.rs  secrets.ts  teardown.rs
src/lib/: config.ts  docker.ts  health.ts  log.ts  systemd.ts
tests/integration/: Dockerfile  README.md  test_install.sh
