[package]
name = "hl"
version = "0.0.3"
edition = "2021"
license = "MIT"

[[bin]]
name = "hl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
colored = "2.1"
regex = "1.10"
rand = "0.9.2"
shell-words = "1.1.0"
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3.8"
serial_test = "3.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
