[package]
name = "hl"
version = "1.0.1"
edition = "2021"
license = "MIT"

[[bin]]
name = "hl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.50", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
colored = "3.1"
regex = "1.12"
rand = "0.10.1"
shell-words = "1.1.1"
dotenvy = "0.15.7"

[dev-dependencies]
tempfile = "3.26"
serial_test = "3.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
